--- a/simulated_psf_fwhm.Rmd
+++ b/simulated_psf_fwhm.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.3.0
+      jupytext_version: 1.6.0
   kernelspec:
     display_name: Python 3
     language: python
@@ -30,7 +30,7 @@ psflist = np.array([6, 37, 50, 58, 76, 93])
 
 psfdata = np.zeros([6, 3, 251001])
 for i, tes in enumerate(psflist):
-    data = np.loadtxt('/home/james/TESonsky/psf{}.dat'.format(tes), skiprows=1)
+    data = np.loadtxt('/home/james/TESonSky/psf{}.dat'.format(tes), skiprows=1)
     psfdata[i,:,:] = data.T
 
 plt.figure(figsize=(10,10))
@@ -158,6 +158,60 @@ print((max(azi) - min(azi))/num, "degrees/point in whole image")
 print(((max(azi) - min(azi))/num) * len(zi), "degrees for cut length")
 
 print("FWHM in deg ", results_half[0] * ((max(azi) - min(azi))/num) ) #= fwhm in deg
+```
+
+```{python}
+"""The same but in degress for SPIE plot"""
+tes76 = 5
+
+azmin = min(psfdata[tes76,0,:])
+azmax = max(psfdata[tes76,0,:])
+elmin = min(psfdata[tes76,1,:])
+elmax = max(psfdata[tes76,1,:])
+
+X = np.linspace(azmin, azmax, 101)
+Y = np.linspace(elmax, elmin, 101)
+
+# x0, y0 = 50, 158# These are in _pixel_ coordinates!! in DEGREES
+# x1, y1 = 175, 32
+x0, y0 = 25, 79# These are in _pixel_ coordinates!! in DEGREES
+x1, y1 = 81, 22
+
+plt.figure(figsize=(16,12))
+plt.subplot(1,2,1)
+plt.imshow(psfmesh[tes76,:,:], aspect='equal')
+plt.grid(True)
+plt.plot([x0, x1], [y0, y1], 'ro-')
+
+
+plt.subplot(1,2,2)
+plt.imshow(psfmesh[tes76,:,:], aspect='equal', extent=[azmin, azmax, elmin, elmax])
+plt.grid(True)
+plt.plot([X[x0], X[x1]], [Y[y0], Y[y1]], 'ro-')
+
+xr = np.linspace(x0, x1, x1-x0)
+yr = np.linspace(y0, y1, x1-x0)
+zi = psfmesh[tes76,:,:][xr.astype(np.int), yr.astype(np.int)]
+zi = scipy.ndimage.map_coordinates(np.transpose(psfmesh[tes76,:,:]), np.vstack((xr,yr)))
+azi = np.linspace(X[x0], X[x1], len(zi))
+
+peaks, _ = find_peaks(zi, prominence=0.2)
+results_half = peak_widths(zi, peaks, rel_height=0.5)
+print(results_half)
+
+degpt = (azmax - azmin)/101
+print(degpt)
+
+plt.figure(figsize=(16,8))
+plt.plot(azi, zi, label="Cut", lw=4)
+plt.plot(azi[peaks], zi[peaks], "x", label="Peaks", mew=5, ms=10)
+plt.plot(azi[peaks], results_half[1], '_', mew=5, ms=10, 
+         label="FWHM = {:3.3}$^\circ$".format(results_half[0][1]*degpt))
+plt.plot(azi[peaks], zi[peaks], "x", mew=5, ms=10, 
+         label="Peak Sep {:3.2}$^\circ$, {:3.2}$^\circ$".format(azi[peaks][1]-azi[peaks][0], azi[peaks][1]-azi[peaks][2]))
+
+plt.legend(loc='upper left', fontsize=15)
+
 ```
 
 ```{python}
